--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,4 +79,9 @@
 
     <string name="pref_title_vibrate">Vibrate</string>
 
+
+    <string name="pref_location_label">Location</string>
+    <string name="pref_location_default" translatable="false">84606</string>
+    <string name="pref_location_key" translatable="false">location</string>
+
 </resources>
