--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,4 +84,15 @@
     <string name="pref_location_default" translatable="false">84606</string>
     <string name="pref_location_key" translatable="false">location</string>
 
+
+    <string name="pref_units_label">Temperature Units</string>
+    <string name="prefs_unit_key">unit_key</string>
+    <string name="pref_units_metric">metric</string>
+    <string name="pref_units_imperial">imperial</string>
+
+    <string name="pref_units_label_metric">Metric</string>
+    <string name="pref_units_label_imperial">Imperial</string>
+
+
+
 </resources>
