--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,6 +93,8 @@
     <string name="pref_units_label_metric">Metric</string>
     <string name="pref_units_label_imperial">Imperial</string>
 
+    <string name="action_map">Map Location</string>
 
+    <string name="action_share">Share</string>
 
 </resources>
